--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,3 +40,111 @@ body{
 .section2 {background: gray;}
 .section3 {background: #99AADD;}
 .section4 {background: #99CC77;}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; 
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; 
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  color: #333;
+  font-weight: 300;
+  line-height: 1.6; 
+}
+
+.container {
+ /* width: 60%;*/
+  margin: 2rem auto; 
+}
+
+.gallery {
+	position: relative;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 1.5rem; 
+}
+
+
+.gallery__img {
+	
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block; 
+  z-index: 1;
+}
+
+.gallery__item--1 {
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 2;  */
+  /* grid-row: 1 / span 2; */
+}
+p{
+	position: absolute;
+    top: 276px;
+    left: 10px;
+}
+
+.gallery__item--2 {
+  grid-column-start: 7;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  /** Alternative Syntax **/
+  /* grid-column: 3 / span 2;  */
+  /* grid-row: 1 / span 2; */
+}
+h2{
+	position: absolute;
+    top: 74px;
+    left: 775px;
+}
+.gallery__item--3 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 6;
+
+  /** Alternative Syntax **/
+  /* grid-column: 5 / span 4;
+  grid-row: 1 / span 5; */
+}
+h3{
+	position: absolute;
+    top: 74px;
+    right: 93px;
+}
+
+.gallery__item--4 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 3;
+  grid-row-end: 6;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 4;  */
+  /* grid-row: 3 / span 3; */
+}
+h4{
+	position: absolute;
+    bottom: 280px;
+    right: 93px;
+}
+
+
