--- a/public/new/css/styles.css
+++ b/public/new/css/styles.css
@@ -11311,7 +11311,7 @@ html {
 
 .navbar-custom {
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.2rem;
   background-color: #000;
 }
 .navbar-custom .navbar-brand {
@@ -11392,4 +11392,18 @@ header.masthead .bg-circle-4 {
     font-size: 4rem;
   }
 }
+.team-member {
+  margin-bottom: 3rem;
+  text-align: center;
+}
+.team-member img {
+  width: 14rem;
+  height: 14rem;
+  border: 0.5rem solid rgba(0, 0, 0, 0.1);
+}
+.team-member h4, .team-member .h4 {
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+}
+
 
