--- a/public/new/css/styles.css
+++ b/public/new/css/styles.css
@@ -11405,4 +11405,66 @@ header.masthead .bg-circle-4 {
   margin-top: 1.5rem;
   margin-bottom: 0;
 }
+
+.section3{
+	width: calc(100% - 40px);
+	height: calc(100vh - 80px);
+	padding: 20px;
+	color: white;
+}
+
+.gallery {
+	position: relative;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 1.5rem; 
+}
+
+
+.gallery__img {
+	
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block; 
+  z-index: 1;
+}
+
+.gallery__item--1 {
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+}
+
+.gallery__item--2 {
+  grid-column-start: 7;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+}
+
+.gallery__item--3 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 6;
+
+}
+.gallery__item--3 h3{
+	position: absolute;
+    top: 74px;
+    right: 93px;
+}
+
+.gallery__item--4 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 3;
+  grid-row-end: 6;
+
+}
 /* slider our team */
