--- a/public/new/css/ourteam.css
+++ b/public/new/css/ourteam.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500&display=swap');
 body {
     font-family: 'Mulish', sans-serif;
-    background: #fff;
+    background: rgb(0, 0, 0);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
