--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -18,6 +18,7 @@
 }
 
 .u-section-1 .u-text-1 {
+  top: 40px;
   font-size: 3rem;
   background-image: none;
   font-weight: 700;
@@ -25,12 +26,14 @@
 }
 
 .u-section-1 .u-line-1 {
+  top: 40px;
   width: 415px;
   transform-origin: left center;
   margin: 8px auto 0 0;
 }
 
 .u-section-1 .u-text-2 {
+  top: 40px;
   font-weight: 600;
   margin: 22px 314px 0 0;
 }
