position margin contact us
posisi

--- a/public/css/nicepage.css
+++ b/public/css/nicepage.css
@@ -35140,6 +35140,8 @@ li.active > a.u-button-style.u-text-black[class*="u-border-"],
 a.u-button-style.u-text-black,
 a.u-button-style.u-text-black[class*="u-border-"] {
   color: #000000 !important;
+  margin-left: 23%;
+  margin-top: 5%;
 }
 a.u-button-style.u-text-black:hover,
 a.u-button-style.u-text-black[class*="u-border-"]:hover,
