--- a/public/css/other-list.css
+++ b/public/css/other-list.css
@@ -3,161 +3,188 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 891px;
-}
-
-.u-section-1 .u-group-1 {
-  width: 84px;
-  min-height: 27px;
-  margin: 48px auto 0 0;
-}
-
-.u-section-1 .u-btn-1 {
-  border-style: none none solid;
-  font-weight: 700;
-  font-family: Poppins;
-  margin: 0 0 0 auto;
-  padding: 0;
-}
-
-.u-section-1 .u-icon-1 {
-  width: 18px;
-  height: 18px;
-  margin: -22px auto 0 0;
-  padding: 0;
+  min-height: 763px;
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 3rem;
-  font-weight: 700;
-  margin: 89px auto 0 0;
+  font-size: 2.25rem;
+  font-weight: 500;
+  margin: 0 0 0 auto;
 }
 
 .u-section-1 .u-line-1 {
-  width: 148px;
-  transform-origin: left center;
-  margin: 6px auto 0 0;
+  width: 107px;
+  transform-origin: right center;
+  margin: 0 0 0 auto;
+}
+
+.u-section-1 .u-shape-1 {
+  width: 644px;
+  height: 683px;
+  margin: 1px auto 0 -45px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin-top: 39px;
-  margin-bottom: 6px;
+  margin: -622px auto 60px 0;
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 315px;
+  min-height: 559px;
   background-image: url("images/frontobservermanpack.jpg");
-  background-position: 50% 75.48%;
+  background-position: 50% 50%;
 }
 
-.u-section-1 .u-container-layout-2 {
-  padding: 30px;
+.u-section-1 .u-container-layout-1 {
+  padding: 0 35px 0 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 315px;
+  min-height: 559px;
 }
 
-.u-section-1 .u-container-layout-3 {
-  padding: 30px 60px;
+.u-section-1 .u-container-layout-2 {
+  padding: 20px 40px 20px 115px;
 }
 
 .u-section-1 .u-text-2 {
   font-weight: 500;
-  margin: 0;
+  margin: 164px auto 0 0;
 }
 
-.u-section-1 .u-layout-cell-3 {
-  min-height: 315px;
-}
-
-.u-section-1 .u-container-layout-4 {
-  padding: 30px 0;
+.u-section-1 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 40px auto 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1403px;
+    min-height: 665px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    width: 564px;
+    height: 424px;
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: -461px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 260px;
+    min-height: 461px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 260px;
-  }
-
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 260px;
+    min-height: 461px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1159px;
+    min-height: 577px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    width: 364px;
+    height: 344px;
+    margin-top: 70px;
+    margin-left: -19px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: -395px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 199px;
+    min-height: 353px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-right: 30px;
   }
 
   .u-section-1 .u-layout-cell-2 {
     min-height: 100px;
   }
 
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 30px;
+  .u-section-1 .u-container-layout-2 {
     padding-right: 30px;
-  }
-
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 199px;
+    padding-left: 83px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1959px;
+    min-height: 1440px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    width: 519px;
+    height: 386px;
+    margin-top: 335px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 926px;
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 299px;
+    min-height: 499px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-right: 0;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 329px;
   }
 
   .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 149px;
+    padding: 138px 10px 13px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1515px;
+    min-height: 1082px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.5rem;
+  }
+
+  .u-section-1 .u-shape-1 {
+    height: 351px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 907px;
+    width: 281px;
+    margin-top: -293px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 188px;
+    min-height: 242px;
   }
 
-  .u-section-1 .u-layout-cell-3 {
-    min-height: 94px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 189px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-top: 85px;
   }
 }
