--- a/public/new/css/produk2.css
+++ b/public/new/css/produk2.css
@@ -188,6 +188,8 @@
 .gallery-item .text{
     opacity: 0;
     position: absolute;
+    height: 100%;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -196,14 +198,17 @@
     pointer-events: none;
     z-index: 4;
     transition: .3s ease-in-out;
-    /* -webkit-backdrop-filter: blur(5px) saturate(1.8);
-    backdrop-filter: blur(5px) saturate(1.8); */
+    -webkit-backdrop-filter: blur(5px) saturate(1.8);
+    backdrop-filter: blur(5px) saturate(2.8);
 }
 .gallery-item:hover .text{
     opacity: 1;
     animation: move-down .3s linear;
-    padding: 1em;
-    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
 
 }
 .w-1{
